fix layout issue on resume page

--- a/src/components/styles/Resume.css
+++ b/src/components/styles/Resume.css
@@ -51,3 +51,7 @@ p > img {
 .MuiListItemText-primary {
     color: beige;
 }
+
+.stack {
+    margin-top: 200px;
+}
